--- a/index.html
+++ b/index.html
@@ -120,15 +120,11 @@
 
             document.getElementById('result').textContent = resultText;
         }
+         if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/service-worker.js')
+        .catch((error) => {}); // Ошибки не будут отображаться
+    }
     </script>
-if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/service-worker.js')
-        .then((registration) => {
-            console.log("Service Worker зарегистрирован:", registration);
-        })
-        .catch((error) => {
-            console.log("Ошибка регистрации Service Worker:", error);
-        });
-}
+
 </body>
 </html> 
